# bling-erp-api-doc-mcp

./: .gitignore  README.md  fastmcp.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: enhance_openapi.py  generate_markdown_reference.py  validate_openapi.py
src/bling_doc_mcp/: app.py  server.py
src/bling_doc_mcp/files/: bling-openapi-reference.md  bling-openapi-reference.md.backup  bling-openapi.json  bling-openapi.json.backup
src/bling_doc_mcp/prompts/: __init__.py  small_prompts.py
src/bling_doc_mcp/resources/: __init__.py  docs.py
src/bling_doc_mcp/tools/: __init__.py  api_info.py
src/bling_doc_mcp/utils/: __init__.py  openapi.py  ref_resolver.py
tests/: test_ref_resolver.py  test_tools.py
