[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bling-doc-mcp"
version = "0.1.0"
description = "Servidor MCP para navegação e consulta da documentação da API Bling ERP"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0b2",
]
keywords = ["mcp", "bling", "openapi", "documentation", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "ruff",
    "basedpyright",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bling_doc_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

# ============================
# Linting (Ruff)
# ============================
[tool.ruff]
line-length = 88
target-version = "py311"
fix = false
show-fixes = true
indent-width = 4
exclude = [
    "venv",
    ".venv",
    "env",
    ".env",
    "node_modules",
    "__pycache__",
    "scripts",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "S", "RET"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ============================
# Tipagem (Pyright)
# ============================
[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
include = ["src", "tests"]
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
reportUnusedImport = "none"
executionEnvironments = [{ root = "src" }]
